--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   database:
     image: "postgres:13"
     container_name: db-pg
+    env_file:
+      - db_credentials.env
     ports:
       - "5432:5432"
 
@@ -12,6 +14,8 @@ services:
       context: .
     command: bash -c "python main.py"
     container_name: main
+    env_file:
+      - db_credentials.env
     volumes:
       - ./app:/app
     depends_on:
