--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 aiohttp==3.8.1
 aiosignal==1.2.0
+alembic==1.8.1
 async-timeout==4.0.2
+asyncpg==0.26.0
 attrs==22.1.0
 charset-normalizer==2.1.1
 frozenlist==1.3.1
 greenlet==1.1.3
 idna==3.3
+Mako==1.2.2
+MarkupSafe==2.1.1
 multidict==6.0.2
 psycopg2==2.9.3
 SQLAlchemy==1.4.41
