--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,16 @@ async-timeout==4.0.2
 asyncpg==0.26.0
 attrs==22.1.0
 charset-normalizer==2.1.1
+flake8==5.0.4
 frozenlist==1.3.1
 greenlet==1.1.3
 idna==3.3
 Mako==1.2.2
 MarkupSafe==2.1.1
+mccabe==0.7.0
 multidict==6.0.2
 psycopg2==2.9.3
+pycodestyle==2.9.1
+pyflakes==2.5.0
 SQLAlchemy==1.4.41
 yarl==1.8.1
