--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,6 @@
+exclude: ^migrations/
+
+repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: "v2.5.0"
   hooks:
@@ -8,7 +11,6 @@
 
   hooks:
     - id: black
-      exclude: ^migrations/
       name: black
       entry: black
       language: system
@@ -16,9 +18,8 @@
       args: [--line-length=200, --target-version=py37]
 
     - id: autoflake
-      exclude: ^migrations/
       name: autoflake
       entry: autoflake
       language: system
       types: [python]
-      args: [--in-place, --remove-all-unused-imports, --remove-duplicate-keys]
+      args: [--in-place, --remove-duplicate-keys]
