--- a/requirements.txt
+++ b/requirements.txt
@@ -4,17 +4,34 @@ alembic==1.8.1
 async-timeout==4.0.2
 asyncpg==0.26.0
 attrs==22.1.0
+autoflake==1.5.3
+black==22.8.0
+cfgv==3.3.1
 charset-normalizer==2.1.1
+click==8.1.3
+colorama==0.4.5
+distlib==0.3.6
+filelock==3.8.0
 flake8==5.0.4
 frozenlist==1.3.1
 greenlet==1.1.3
+identify==2.5.5
 idna==3.3
 Mako==1.2.2
 MarkupSafe==2.1.1
 mccabe==0.7.0
 multidict==6.0.2
+mypy-extensions==0.4.3
+nodeenv==1.7.0
+pathspec==0.10.1
+platformdirs==2.5.2
+pre-commit==2.20.0
 psycopg2==2.9.3
 pycodestyle==2.9.1
 pyflakes==2.5.0
+PyYAML==6.0
 SQLAlchemy==1.4.41
+toml==0.10.2
+tomli==2.0.1
+virtualenv==20.16.5
 yarl==1.8.1
