--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,54 @@
 aiohttp==3.8.1
 aiosignal==1.2.0
 alembic==1.8.1
+asttokens==2.0.8
 async-timeout==4.0.2
 asyncpg==0.26.0
 attrs==22.1.0
 autoflake==1.5.3
+backcall==0.2.0
 beautifulsoup4==4.11.1
 black==22.8.0
 cfgv==3.3.1
 charset-normalizer==2.1.1
 click==8.1.3
 colorama==0.4.5
+decorator==5.1.1
 distlib==0.3.6
+executing==1.0.0
 filelock==3.8.0
 flake8==5.0.4
 frozenlist==1.3.1
 greenlet==1.1.3
 identify==2.5.5
 idna==3.3
+jedi==0.18.1
 Mako==1.2.2
 MarkupSafe==2.1.1
+matplotlib-inline==0.1.6
 mccabe==0.7.0
 multidict==6.0.2
 mypy-extensions==0.4.3
 nodeenv==1.7.0
+parso==0.8.3
 pathspec==0.10.1
+pickleshare==0.7.5
 platformdirs==2.5.2
 pre-commit==2.20.0
+prompt-toolkit==3.0.31
 psycopg2==2.9.3
+pure-eval==0.2.2
 pycodestyle==2.9.1
 pyflakes==2.5.0
+Pygments==2.13.0
 PyYAML==6.0
+six==1.16.0
 soupsieve==2.3.2.post1
 SQLAlchemy==1.4.41
+stack-data==0.5.0
 toml==0.10.2
 tomli==2.0.1
+traitlets==5.3.0
 virtualenv==20.16.5
+wcwidth==0.2.5
 yarl==1.8.1
